# mir_robot

mir_srv/: CMakeLists.txt  package.xml
mir_srv/srv/: pose_desired.srv
