<?xml version="1.0"?>
<package format="2">
  <name>mir_srv</name>
  <version>1.3.0</version>
  <description>The dsr_msgs package</description>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>